<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <group android:id="@+id/bookcase_menu">
        <item
            android:id="@+id/action_edit"
            android:icon="@drawable/ic_arrange"
            android:title="@string/menu_bookcase_edit"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_styleChange"
            android:icon="@drawable/ic_view_switch"
            android:title="@string/menu_bookcase_style"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_addLocalBook"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_bookcase_add"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_download_all"
            android:icon="@drawable/ic_download"
            android:title="@string/menu_bookcase_download"
            android:visible="true"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_qr_scan"
            android:icon="@drawable/ic_scan"
            android:title="@string/menu_bookcase_scan"
            android:visible="true"
            app:showAsAction="never" />
    </group>

</menu>
